# purelymailcalendar

./: .dockerignore  .env.compose.example  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
calinvite/: __init__.py  __main__.py  caldav_client.py  config.py  ics.py  inbound_invites.py  mailer.py  rsvp.py  sieve_client.py
calinvite_web/: __init__.py  admin.py  app.py  auth.py  crypto.py  db.py  mailbox.py  mailer_transactional.py  models.py  reminders.py  schemas.py  services.py
scripts/: dev.sh
sieve/: calinvite.sieve
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/public/: about.html  llms.txt  manifest.json  robots.txt  sitemap.xml
web/public/.well-known/: security.txt
web/src/: App.tsx  api.ts  index.css  types.ts  useReminders.ts  util.ts
web/src/components/: CalendarView.tsx  EventCard.tsx  EventForm.tsx  EventsView.tsx  Header.tsx  LoginView.tsx  MonthView.tsx  OnboardingView.tsx  RsvpsView.tsx  RunningSha.tsx  Toast.tsx  TrustLine.tsx  UnofficialNote.tsx  VerifyView.tsx  WeekView.tsx
