[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calinvite"
version = "0.1.0"
description = "CalDAV + SMTP/IMAP calendar invites with RSVP handling for Purelymail"
requires-python = ">=3.11"
dependencies = [
    "caldav>=1.3.9",
    "icalendar>=5.0.11",
    "python-dotenv>=1.0.1",
    "sievelib>=1.4.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "itsdangerous>=2.2.0",
    "resend>=2.0.0",
    "psycopg[binary]>=3.1.18",
]

[project.scripts]
calinvite = "calinvite.__main__:main"

[tool.setuptools.packages.find]
include = ["calinvite*", "calinvite_web*"]

[tool.setuptools.package-data]
calinvite = ["../sieve/*.sieve"]
